--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "devarchy-cdk",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "library of constructs to simplify cloud development usign js/ts",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && cp package.json dist/package.json",
     "deploy": "echo \"deploying to prod\"",
     "watch": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
