--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Diego Torres <diegotorres0303@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@aws-cdk/aws-cognito-identitypool-alpha": "^2.133.0-alpha.0"
+    "@aws-cdk/aws-cognito-identitypool-alpha": "^2.133.0-alpha.0",
+    "aws-cdk-lib": "^2.159.0"
   }
 }
