--- a/database/tiny-vector/layers/tiny-vector-db-core/nodejs/package.json
+++ b/database/tiny-vector/layers/tiny-vector-db-core/nodejs/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.451.0",
-    "vectordb": "^0.3.7"
+    "vectordb": "^0.3.7",
+    "tinyVectorTools": "file:./tiny-vector.js"
   }
 }
