--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   "license": "ISC",
   "dependencies": {
     "@aws-cdk/aws-cognito-identitypool-alpha": "^2.133.0-alpha.0",
-    "aws-cdk-lib": "^2.159.0"
+    "@aws-sdk/client-bedrock-runtime": "^3.654.0",
+    "@lancedb/lancedb": "^0.10.0",
+    "@langchain/textsplitters": "^0.1.0",
+    "aws-cdk-lib": "^2.159.0",
+    "llm-chunk": "^0.0.1",
+    "vectordb": "^0.10.0"
   }
 }
