--- a/database/tiny-vector/layers/tiny-vector-db-core/nodejs/package.json
+++ b/database/tiny-vector/layers/tiny-vector-db-core/nodejs/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.451.0",
-    "vectordb": "^0.3.7",
-    "tinyVectorTools": "file:./tiny-vector.js"
+    "@langchain/textsplitters": "^0.1.0",
+    "tiny-vector": "file:./lib/tiny-vector",
+    "vectordb": "^0.10.0"
   }
 }
